[tool.poetry]
name = "ppgs"
version = "0.1.0"
description = ""
authors = ["v3code <vitalik.w555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
scipy = "^1.10.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
plotille = "^5.0.0"
pathlib2 = "^2.3.7.post1"
git-python = "^1.0.3"
pipenv = "^2023.4.20"
graphviz = "^0.20.1"
torch = "^2.0.0"
torchvision = "^0.15.1"
tensorboardx = "^2.6"
cloudpickle = "^2.2.1"
forwardable = "^0.4.1"
ipython = "^8.12.0"
pipfile = "^0.0.2"
shell = "^1.0.1"
gym = "^0.26.2"
tqdm = "^4.65.0"
jupyter = "^1.0.0"
filelock = "^3.12.0"
cffi = "^1.15.1"
imageio = "^2.28.0"
imageio-ffmpeg = "^0.4.8"
tensorboard = "^2.12.2"
cmake = "^3.26.3"
networkx = "^3.1"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
